test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/16/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/16/Solution.java:15: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ requires((num[0] == 0) ==> (num.length == 1));
                 ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/16/Solution.java:25: verify: The prover cannot establish an assertion (PossiblyTooLargeIndex) in method addToArrayForm
            int temp = (num[i] + k % 10) * carry;
                           ^
error: An error while executing a proof script for addToArrayForm: (error "Solver has unexpectedly terminated")
1 error
2 verification failures
